@@ -691,4 +691,32 @@
     \x{fdee}
     \x{fdef}
 
+/^\d*\w{4}/8
+    1234
+    123 
+    
+/^\p{Any}*\d{4}/8
+    1234
+    123 
+ 
+/^\X*\w{4}/8
+    1234
+    123  
+    
+/^[^b]*\w{4}/8
+    aaaa
+    aaa  
+ 
+/^[^b]*\w{4}/8i
+    aaaa
+    aaa  
+ 
+/^\x{100}*.{4}/8
+    \x{100}\x{100}\x{100}\x{100}
+    \x{100}\x{100}\x{100}
+
+/^\x{100}*.{4}/8i
+    \x{100}\x{100}\x{100}\x{100}
+    \x{100}\x{100}\x{100}
+
 /-- End of testinput4 --/
